# dishes

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
dishes/: __init__.py
dishes/imaging/: extract_pv_diagram.py  find.py  imaging.py  imtovis.py  libimaging.py  libimaging.pyx  match_source_lists.py  readimfits.py  readpvfits.py
dishes/interferometry/: fit_model.py  interpolate_model.py  invert.py  libinterferometry.py  match_baselines.py  model.py  readms.py  readuvfits.py
dishes/spectroscopy/: __init__.py  line_flux.py  spectroscopy.py
docs/: conf.py  index.rst  installation.rst  interferometry.rst
docs/_build/html/: genindex.html  index.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
